# MCS-cloud-server

./: CMakeLists.txt  README.md  a.out  main.c  make.sh  makefile  notes.txt  run.sh
App/: App.c  App.h  CMakeLists.txt
Enclave/: CMakeLists.txt  Enclave.c  Enclave.config.xml  Enclave.edl  Enclave.h  printUtil.c  printUtils.h
tpl/: pbc.rar
tpl/pbc/: .configure.ac.swp  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
tpl/pbc/arith/: fasterfp.c  fastfp.c  fieldquadratic.c  fp.c  multiz.c  naivefp.c  random.c  ternary_extension_field.c  z.c
tpl/pbc/arith/.deps/: libsgx_tpbc_a-dlog.Po  libsgx_tpbc_a-fasterfp.Po  libsgx_tpbc_a-fastfp.Po  libsgx_tpbc_a-field.Po  libsgx_tpbc_a-fieldquadratic.Po  libsgx_tpbc_a-fp.Po  libsgx_tpbc_a-init_random.Po  libsgx_tpbc_a-montfp.Po  libsgx_tpbc_a-multiz.Po  libsgx_tpbc_a-naivefp.Po  libsgx_tpbc_a-poly.Po  libsgx_tpbc_a-random.Po  libsgx_tpbc_a-ternary_extension_field.Po  libsgx_tpbc_a-z.Po
tpl/pbc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
tpl/pbc/ecc/: pairing.c  singular.c
tpl/pbc/ecc/.deps/: libsgx_tpbc_a-a_param.Po  libsgx_tpbc_a-curve.Po  libsgx_tpbc_a-d_param.Po  libsgx_tpbc_a-e_param.Po  libsgx_tpbc_a-eta_T_3.Po  libsgx_tpbc_a-f_param.Po  libsgx_tpbc_a-g_param.Po  libsgx_tpbc_a-hilbert.Po  libsgx_tpbc_a-mnt.Po  libsgx_tpbc_a-mpc.Po  libsgx_tpbc_a-pairing.Po  libsgx_tpbc_a-param.Po  libsgx_tpbc_a-singular.Po
tpl/pbc/misc/.deps/: libsgx_tpbc_a-darray.Po  libsgx_tpbc_a-get_time.Po  libsgx_tpbc_a-memory.Po  libsgx_tpbc_a-pbc_sgx_ext.Po  libsgx_tpbc_a-symtab.Po  libsgx_tpbc_a-utils.Po
