IF(${SGX_MODE} EQUAL HW)
SET(Trts_Library_Name sgx_trts)
SET(Service_Library_Name sgx_tservice)
ELSE()
SET(Trts_Library_Name sgx_trts_sim)
SET(Service_Library_Name sgx_tservice_sim)
ENDIF()

SET(Crypto_Library_Name sgx_tcrypto)
FILE(GLOB_RECURSE Enclave_C_Files "*.c")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Include ${PROJECT_SOURCE_DIR}/Enclave ${SGX_SDK}/include ${SGX_SDK}/include/tlibc $(SGX_SDK)/include/libcxx /usr/local/include)
SET(Enclave_C_Flags "${SGX_COMMON_CFLAGS} -nostdinc -fvisibility=hidden -fpie -ffunction-sections -fdata-sections -fstack-protector-strong")
SET(Enclave_Cpp_Flags "${Enclave_C_Flags} -std=c++11 -nostdinc++")
SET(Enclave_Link_Flags "${SGX_COMMON_CFLAGS} -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L${SGX_LIBRARY_PATH} -Wl,--whole-archive -lsgx_tswitchless -l${Trts_Library_Name} -Wl,--no-whole-archive -Wl,--start-group -lsgx_tstdc -lmysqlclient -lsgx_tcxx -l${Crypto_Library_Name} -l${Service_Library_Name} -Wl,--end-group -Wl,-Bstatic -Wl,-Bsymbolic -Wl,--no-undefined -Wl,-pie,-eenclave_entry -Wl,--export-dynamic -Wl,--defsym,__ImageBase=0 -Wl,--gc-sections -Wl,--version-script=${PROJECT_SOURCE_DIR}/Enclave/Enclave.lds")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_C_FLAGS ${Enclave_C_Flags})
SET(CMAKE_CXX_FLAGS ${Enclave_Cpp_Flags})
SET(CMAKE_SHARED_LINKER_FLAGS ${Enclave_Link_Flags})
LINK_DIRECTORIES(${SGX_LIBRARY_PATH})
ADD_LIBRARY(enclave SHARED ${Enclave_C_Files} ../build/Enclave_t.c)
TARGET_LINK_LIBRARIES(enclave ${Trts_Library_Name})
TARGET_LINK_LIBRARIES(enclave sgx_tpbc sgx_tgmp)
TARGET_LINK_LIBRARIES(enclave ${Crypto_Library_Name} sgx_tcxx sgx_tstdc ${Service_Library_Name})
